added supervision endpoints (status/stop)
